--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <button class="program-button" onclick="IncreaseMain();"><span class="function">program</span><span class="brackets">()</span>;</button>
   <p id="lines-counter">There are currently 0 lines of code in your project</p>
   <script src="script.js"></script>
+  <p id="version-number">Pulling from script...</p>
 </body>
 </html>
