--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <button class="program-button" onclick="IncreaseMain();"><span class="function">program</span><span class="brackets">()</span>;</button>
   <p id="lines-counter">There are currently 0 lines of code in your project</p>
-  <script src="script.js"></script>
   <p id="version-number">Pulling from script...</p>
+  <script src="script.js"></script> <!-- how the hell did i not realize this was the cause for the null reference -->
 </body>
 </html>
